<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FarmaTools</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="btn_ventas">Ventas</string>
    <string name="btn_busqueda">Busqueda</string>
    <string name="btn_admin">Administracion</string>
    <string name="btn_servicios">Servicios</string>
    <string name="btn_reportes">Reportes</string>
    <string name="btn_sin_stock">Sin stock</string>
    <string name="title_activity_ventas">Ventas</string>
    <string name="title_activity_busqueda">Busqueda</string>
    <string name="title_activity_admin">Admin</string>
    <string name="title_activity_servicios">Servicios</string>
    <string name="title_activity_reportes">Reportes</string>
    <string name="title_activity_sin_stock">SinStock</string>
    <string name="btn_alta">Alta Productos</string>
    <string name="btn_busqueda_productos">Busqueda Productos</string>
    <string name="title_activity_alta_producto">AltaProducto</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_descripcion">Descripcion</string>
    <string name="txt_precio">Precio</string>
    <string name="txt_cantidad">Cantidad</string>
    <string name="txt_descuento">Descuento</string>
    <string name="txt_codigo">Codigo de Barras</string>
    <string name="title_activity_busqueda_admin">BusquedaAdmin</string>
    <string name="aceptar">Aceptar</string>
    <string name="btn_leer_codigo">Leer Codigo</string>
    <string name="btn_comprar">Comprar</string>
    <string name="medicamento">Medicamento</string>

</resources>