<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="5" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="Imagen de la Empresa"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/btn_ventas"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_ventas" />

                <Button
                    android:id="@+id/btn_busqueda"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_busqueda" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

                <Button
                    android:id="@+id/btn_admin"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_admin" />

                <Button
                    android:id="@+id/btn_servicios"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_servicios" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

                <Button
                    android:id="@+id/btn_reportes"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_reportes" />

                <Button
                    android:id="@+id/btn_sin_stock"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_sin_stock" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>