<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AltaProducto" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="5" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="Imagen de la Empresa"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <TableLayout
                    android:id="@+id/TableLayout01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" >

                    <TableRow
                        android:id="@+id/TableRow15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView08"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_nombre" />

                        <EditText
                            android:id="@+id/EditText09"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10" >

                            <requestFocus />
                        </EditText>
                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRow16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView09"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_descripcion" />

                        <EditText
                            android:id="@+id/EditText07"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRow17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView06"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_precio" />

                        <EditText
                            android:id="@+id/EditText06"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRow12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView01"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_descuento" />

                        <EditText
                            android:id="@+id/EditText02"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRow13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView02"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_codigo" />

                        <EditText
                            android:id="@+id/EditText01"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRow18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/TextView07"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_cantidad" />

                        <EditText
                            android:id="@+id/EditText08"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRow14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >
                    </TableRow>

                    <TextView
                        android:id="@+id/txt_categoria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Categoria" />

                    <Spinner
                        android:id="@+id/spin_categoria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </TableLayout>

                <TableLayout
                    android:id="@+id/Table_medicametos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" >

                    <TableRow
                        android:id="@+id/TableRow05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/txt_laboratorio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Laboratorio" />

                        <EditText
                            android:id="@+id/edit_laboratorio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRow04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/txt_sustancia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Sustancia" />

                        <EditText
                            android:id="@+id/edit_sustancia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRow03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/txt_presentacion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Prentacion" />

                        <EditText
                            android:id="@+id/edit_presentacion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRow06"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <FrameLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent" >
                        </FrameLayout>

                        <CheckBox
                            android:id="@+id/check"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Controlado" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRow02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <FrameLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent" >
                        </FrameLayout>

                        <CheckBox
                            android:id="@+id/CheckBox02"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Antibiotico" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/TableRow01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <FrameLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent" >
                        </FrameLayout>

                        <CheckBox
                            android:id="@+id/CheckBox01"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/medicamento" />
                    </TableRow>
                </TableLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TableRow
                        android:id="@+id/tableRow6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >
                    </TableRow>

                    <TableRow
                        android:id="@+id/tableRow9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >
                    </TableRow>

                    <TableRow
                        android:id="@+id/row"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right" >

                        <Button
                            android:id="@+id/btn_codigo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_leer_codigo" />

                        <Button
                            android:id="@+id/btn_aceptar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/aceptar" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

        </FrameLayout>
    </LinearLayout>

</RelativeLayout>